--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
+    <p>YOOOO</p>
 <meta charset="utf-8">
 <script src="./demo.js" type="module"></script>
 </head>
 <body>
-    <p>HEFGKSLGKNkl</p>
 </body>
 </html>
 
