add documentation link

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <p>YOOOO</p>
+    <a href='out/index.html' target='_blank'>Link to documentation</a>
 <meta charset="utf-8">
 <script src="./demo.js" type="module"></script>
 </head>
