--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html lang="en">
 <head>
-    <a href='out/index.html' target='_blank'>Link to documentation for A3</a>
+    <p> hey </p>
 <meta charset="utf-8">
 <script src="./demo.js" type="module"></script>
 </head>
