Added state tables

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html lang="en">
 <head>
     <a href='out/index.html' target='_blank'>Link to documentation for A3</a>
+    <a href='State Tables.pdf' target='_blank'>Link to State Tables PDF</a>
 <meta charset="utf-8">
 <script src="./demo.js" type="module"></script>
 </head>
